global change from samba.anu.edu.au to samba.org

--- a/packaging/SGI/relnotes.html
+++ b/packaging/SGI/relnotes.html
@@ -110,7 +110,7 @@ Neither the authors or Silicon Graphics are compelled to help resolve problems
 you may encounter in the installation, setup, or execution of this software.
 To be more to the point, if you call us with an issue regarding products
 in the Freeware package, we'll have to gracefully terminate the call. The
-<A HREF="http://samba.anu.edu.au/pub/samba/">
+<A HREF="http://samba.org/pub/samba/">
 Samba Web Page</A> has a listing of companies and individuals that offer
 commercial support for a fee.
 </P>
@@ -206,14 +206,14 @@ of the <B>docs</B> directory from the Samba distribution; consult <I>samba</I>(7
 for an introduction. </P>
 
 <P>There is a mailing list for discussion of Samba. To subscribe send mail
-to <A HREF="mailto:listproc@samba.anu.edu.au">listproc@samba.anu.edu.au</A>
+to <A HREF="mailto:listproc@samba.org">listproc@samba.org</A>
 with a body of &quot;subscribe samba Your Name&quot; </P>
 
-<P>To send mail to everyone on the list mail to <A HREF="mailto:samba@samba.anu.edu.au">samba@samba.anu.edu.au</A>.
+<P>To send mail to everyone on the list mail to <A HREF="mailto:samba@samba.org">samba@samba.org</A>.
 </P>
 
 <P>There is also an announcement mailing list where new versions are announced.
-To subscribe send mail to <A HREF="mailto:listproc@samba.anu.edu.au">listproc@samba.anu.edu.au</A>
+To subscribe send mail to <A HREF="mailto:listproc@samba.org">listproc@samba.org</A>
 with a body of &quot;subscribe samba-announce Your Name&quot;. All announcements
 also go to the samba list. </P>
 
@@ -224,7 +224,7 @@ list. It is not, however, exclusive to Samba, it is a forum for discussing
 the SMB protocol (which Samba implements). </P>
 
 <P>A Samba WWW site has been setup with lots of useful info. Connect to:
-<A HREF="http://samba.anu.edu.au/pub/samba/">http://samba.anu.edu.au/pub/samba/</A>.
+<A HREF="http://samba.org/pub/samba/">http://samba.org/pub/samba/</A>.
 It is maintained by Paul Blackman (thanks Paul!). You can contact him at
 <A HREF="mailto:ictinus@lake.canberra.edu.au">ictinus@lake.canberra.edu.au</A>.
 </P>
