--- a/swat/help/welcome.html
+++ b/swat/help/welcome.html
@@ -34,6 +34,6 @@ Here are some of the features we want to eventually incorporate.<p>
 <H2>Feedback</H2>
 
 Please join the <A
-HREF="http://samba.anu.edu.au/listproc/">samba</A> mailing
+HREF="http://samba.org/listproc/">samba</A> mailing
 list if you want to discuss issues with this release of SWAT.
 
