--- a/swat/help/welcome.html
+++ b/swat/help/welcome.html
@@ -35,6 +35,7 @@ Please choose a configuration action using one of the above buttons
    <ul>
     <li><a href="/swat/help/samba.7.html" target="docs">Samba introduction</a>
     <li><a href="/swat/help/DOMAIN_MEMBER.html" target="docs">Joining an NT Domain</a>
+    <li><a href="/swat/help/NT_Security.html" target="docs">Changing UNIX permissions using NT</a>
     <li><a href="/swat/help/smbrun.1.html" target="docs">smbrun</a> - internal smbd utility
    </ul>
 </ul>
