--- a/swat/help/welcome.html
+++ b/swat/help/welcome.html
@@ -24,6 +24,7 @@ Please choose a configuration action using one of the above buttons
     <li><a href="/swat/help/nmblookup.1.html" target="docs">nmblookup</a> - NetBIOS name query tool
     <li><a href="/swat/help/smbtar.1.html" target="docs">smbtar</a> - SMB backup tool
     <li><a href="/swat/help/smbclient.1.html" target="docs">smbclient</a> - command line SMB client
+    <li><a href="/swat/help/smbspool.8.html"  target="docs">smbspool</a> - command line SMB print client
    </ul>
  <li><b>Configuration Files</b>
    <ul>
