docs: Fix an outdated remark, tdbsam is default
Signed-off-by: Volker Lendecke <vl@samba.org>
Reviewed-by: Martin Schwenke <martin@meltin.net>

Autobuild-User(master): Martin Schwenke <martins@samba.org>
Autobuild-Date(master): Tue May  3 08:08:31 CEST 2016 on sn-devel-144

--- a/ctdb/web/samba.html
+++ b/ctdb/web/samba.html
@@ -13,7 +13,7 @@ Do this by running:
   smbpasswd -a root
 </pre>
 
-Samba with clustering must use the tdbsam or ldap SAM passdb backends (it must not use the default smbpasswd backend), or must be configured to be a member of a domain.<br>
+Samba with clustering must use the tdbsam or ldap SAM passdb backends, or must be configured to be a member of a domain.<br>
 The rest of the configuration of Samba is exactly as it is done on a normal system.<br><br>
 See the docs on http://samba.org/ for details.
 
